resolve scrollbar problem

--- a/public/assets/less/jobs.less
+++ b/public/assets/less/jobs.less
@@ -4,12 +4,16 @@
 body {
   line-height: 1em;
 }
-#mask {
+#maskBackground {
   position: fixed;
-	left:0;
-	top:0;
-  background-color: rgba(0, 0, 0, 0.5);
-	z-index:1000;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 990;
+  background-color: #000;
+  filter: alpha(opacity=75);
+  opacity: .75;
 }
 
 
@@ -76,9 +80,10 @@ body {
       display: none;
       width: 100%;
       height: 274px;
-      -webkit-transition: .6s ease-in-out left;
-           -o-transition: .6s ease-in-out left;
-              transition: .6s ease-in-out left;
+      -webkit-transition: .4s linear left;
+         -moz-transition: .4s linear left;
+           -o-transition: .4s linear left;
+              transition: .4s linear left;
     }
 
     > .active,
@@ -192,7 +197,7 @@ body {
 @media screen and (max-width: 768px) {
   .carousel-inner {
     > .item {
-      height: auto !important;
+      height: 170px !important;
     }
   }
   .carousel-indicators {
@@ -280,12 +285,17 @@ body {
           color: #fff;
         }
       }
+      > li + li {
+        margin-right: 0px;
+      }
     }
   }
 }
 
 @media screen and (max-width: 768px) {
   .jobs-content {
+    padding-top: 0px;
+    padding-bottom: 0px;
     .jobs-category {
       width: 100%;
       .jobs-category-title {
@@ -307,17 +317,32 @@ body {
 
 // JOBS-DETAIL
 //----------------------------------------------------------
+#job-detail-wrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  height: auto;
+  z-index: 1000;
+  display: none;
+  -webkit-overflow-scrolling: touch;
+  outline: 0;
+  overflow-y: auto;
+  visibility: hidden;
+}
 .job-detail {
 	z-index:1001;
+  visibility: visible;
 
-  display: none;
-  position: fixed;
+  position: relative;
   width: 800px;
-  max-height: 600px;
+  height: auto;
+  margin-top: 100px;
+  margin-bottom: 100px;
   background-color: #fff;
   box-shadow: 0 1px 2px rgba(19,74,119,.1);
   border-radius: 4px;
-  overflow-y: scroll;
   .job-detail-title {
     height: auto;
     padding-top: 60px;
@@ -355,9 +380,13 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+  #job-detail-wrapper {
+    visibility: visible;
+  }
   .job-detail {
     width: 90%;
-    max-height: 90%;
+    height: 75%;
+    overflow-y: auto;
     font-size: 14px;
     .job-detail-title {
       padding-top: 26px;
@@ -446,26 +475,38 @@ body {
 
 // KEYFRAMES
 //----------------------------------------------------------
-.logo, .job-detail {
+.logo {
   -webkit-animation: fade-in-down 0.9s;
+     -moz-animation: fade-in-down 0.9s;
+       -o-animation: fade-in-down 0.9s;
           animation: fade-in-down 0.9s;
   -webkit-animation-delay: 0.2s;
+     -moz-animation-delay: 0.2s;
+       -o-animation-delay: 0.2s;
           animation-delay: 0.2s;
 }
 
 @-webkit-keyframes fade-in-down {
   0% {
     opacity: 0;
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
   }
   100% {
     opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
 @keyframes fade-in-down {
   0% {
     opacity: 0;
+    -webkit-transform: translateY(-10px);
+            transform: translateY(-10px);
   }
   100% {
     opacity: 1;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
   }
 }
